--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,13 +1,26 @@
+* {
+  box-sizing: border-box;
+}
+
 body{
     width:100vw;
     height: 100vh;
+    display: flex;
+    padding: 0;
+    margin: 0;
 }
 
 #board{
-    width: 50%;
-    height: 50%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 330px;
+    height: 430px;
+    overflow: hidden;
+    padding-top: 100px;
+    z-index: 1;
+}
+
+h2{
+    width: calc(50% - 165px);
+    text-align: center;
 }
 
 #scorebox{
@@ -24,35 +37,36 @@ body{
     width: 25%;
 }
 
-div {
-    float:left;
-    width: 30%;
-    padding-bottom: 30%;
-}
-
 .square {
-    float:left;
+    float: left;
     position: relative;
-    width: 30%;
-    padding-bottom: 30%; /* = width for a 1:1 aspect ratio */
-    margin:1.66%;
-    overflow:hidden;
+    width: 100px;
+    height: 100px;
+    margin: 5px;
+    text-align: center;
+    line-height: 100px;
+    overflow: hidden;
     background-color: blue;
     border-radius: 20px;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 65px;
 }
 
 .square:hover{
     background-color: red;
 }
 
-.square.X{
-    background-color: green;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
-
+.square.player-X{
+    color: white;
+    background-image: url('http://i.imgur.com/WIIh1xY.png');
+    background-size: cover;
+    background-color: white;
 }
-.square.O{
-    background-color: yellow;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+.square.player-O{
+    color: white;
+    background-image: url('http://i.imgur.com/HuTpMJY.png');
+    background-size: cover;
+    background-color: white;
 }
 
 li{
@@ -64,4 +78,32 @@ li{
   margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+#modal{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0,0,0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+img{
+  width: 250px;
+  height: auto;
+}
+
+input {
+  text-align: center;
+  height: auto;
+  width: auto;
+  font-size: 22px;
+  padding: 10px;
+}
+
+input:focus{
+outline: none;
 }
